--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <script src="content.jwplatform.com/libraries/SAHhwvZq.js"></script> 
-   <!--<script src="https://content.jwplatform.com/libraries/Z79JsmAO.js"></script> -->
+   <script src="https://content.jwplatform.com/libraries/Z79JsmAO.js"></script>
   <style>
     body {
       margin: 0px
